Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1129,17 +1129,17 @@ fieldset {
         line-height: 32px;
     }
     .table-cell h1 {
-        font-size: 32px;
-        line-height: 36px;
+        font-size: 38px;
+        line-height: 42px;
         margin-bottom: 25px;
-        order: 1;
+        order: 2;
     }
     .table-cell h4 {
         font-size: 18px;
         margin-left: 0;
-        margin-bottom: 0;
-        margin-top: 25px;
-        order: 3;
+        margin-bottom: 15px;
+        margin-top: 0;
+        order: 1;
     }
     /* Hide decorative line on h4 for centered mobile layout */
     .table-cell h4:before {
@@ -1156,8 +1156,8 @@ fieldset {
         margin-bottom: 0;
     }
     #herobtn {
-        order: 2;
         margin-top: 0;
+        order: 3;
     }
     .Skills .container-skill .mainSkill .front .frontSkill,
     .Skills .container-skill .mainSkill .back .backSkill,
